Fix snowflake/wrapbattle scenes and repeat scene visits

--- a/scenes/snowflake/snowflake-scene.scss
+++ b/scenes/snowflake/snowflake-scene.scss
@@ -29,6 +29,10 @@ $rotate-bg: $gameover-bg;
     transform: translate3d(0, 9999px, 0) !important;
   }
 
+  [hidden] {
+    display: none;
+  }
+
   @keyframes #{$name}-shimmy {
     10%, 30%, 50%, 70%, 90% {
       transform: translateX(-2em);
